--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <html>
 	<head>
 		<title>Haven Natural Skincare</title>
-	</head>)	
+	</head>	
 	<body>
+		
 		<nav>
-
+			<img src="file:///Users/lizcardwell/Documents/IMED%201316/Haven.svg" alt="Image of the logo for Haven Natural Skincare">
+			<ul>
+				<li>Shop</li>
+				<li>Blog</li>
+				<li>About</li>
+				<li>Contact</li>
+			</ul>
 		</nav>
+
+			<h1>Haven Natural Skincare</h1>
+			<p>Paragraph.</p>
+			
 	</body>
 </html>
