Added nav links

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<nav>
 			<img src="file:///Users/lizcardwell/Documents/IMED%201316/Haven.svg" alt="Image of the logo for Haven Natural Skincare">
 			<ul>
-				<li>Shop</li>
-				<li>Blog</li>
-				<li>About</li>
-				<li>Contact</li>
+				<li><a href="shop.html" title="Go to shop page.">Shop</a></li>
+				<li><a href="blog.html" title="Go to blog.">Blog</a></li>
+				<li><a href="about.html" title="Go to about page.">About</a></li>
+				<li><a href="contact.html" title="Go to contact page.">Contact</a></li>
 			</ul>
 		</nav>
 
