Added to footer

--- a/index.html
+++ b/index.html
@@ -19,14 +19,19 @@
 
 			<footer>
 				<img src="file:///Users/lizcardwell/Documents/IMED%201316/Haven.svg" alt="Image of the logo for Haven Natural Skincare">
+				<div>
+					<ul>
+						<li><a href="https://www.facebook.com/" title="Go to our Facebook page." target="_blank">Facebook</a></li>
+						<li><a href="https://www.linkedin.com/" title="Go to our LinkedIn page." target="_blank">LinkedIn</a></li>
+						<li><a href="https://www.youtube.com/" title="Go to our YouTube page." target="_blank">YouTube</a></li>
+						<li><a href="https://www.instagram.com/" title="Go to our Instagram page." target="_blank">Instagram</a></li>
+					</ul>
+				<div>
+				<div>	
+					<p><a href="signup.html" title="Go to email signup page.">Sign Up</a></p>
+					<p>© 2025 Haven Natural Skincare. All Rights Reserved.</p>
+				<div>	
 				<ul>
-					<li><a href="https://www.facebook.com/" title="Go to our Facebook page." target="_blank">Facebook</a></li>
-					<li><a href="https://www.linkedin.com/" title="Go to our LinkedIn page." target="_blank">LinkedIn</a></li>
-					<li><a href="https://www.youtube.com/" title="Go to our YouTube page." target="_blank">YouTube</a></li>
-					<li><a href="https://www.instagram.com/" title="Go to our Instagram page." target="_blank">Instagram</a></li>
-				</ul>
-				<ul>
-					<li><a href="signup.html" title="Go to email signup page.">Sign Up</a></li>
 					<li><a href="faq.html" title="Go to faq page.">FAQ</a></li>
 					<li><a href="shipping.html" title="Go to shipping page.">Shipping</a></li>
 					<li><a href="returns.html" title="Go to returns page.">Returns</a></li>
