--- a/index.html
+++ b/index.html
@@ -14,7 +14,34 @@
 			</ul>
 		</nav>
 
-			<h1>Haven Natural Skincare</h1>
+		<section>
+			<h1>24 Carrot Face Serum</h1>
+			<a href="24CarrotAddtoCart.html" title="Add 24 Carrot Face Serum to cart.">Add to Cart</a>
+		</section>
+
+		<section>
+			<ul>
+				<li><a href="shopall.html" title="Go to shop all page.">Shop All</a></li>
+				<li><a href="faceserums.html" title="Go to face serums page.">Face Serums</a></li>
+				<li><a href="facemasks.html" title="Go to face masks page.">Face Masks</a></li>
+			</ul>
+			<div>
+				<a href="RoseGoldFaceSerum.html" title="Go to Rose Gold Face Serum page."></a>
+					<img src="RoseGoldFaceSerum.jpg alt=Person holding a bottle of Rose Gold Face Serum">
+					<h2>Rose Gold Face Serum</h2>
+					<h4>A skin quenching blend of cold pressed watermelon seed oil with rose otto and lavender essential oil that is perfect for all skin types</h4>
+					<h5>$54 - 2 fl. oz.</h5>
+					<a href="addtocart.html" title="Add Rose Gold Face Serum to cart."></a>
+				<a href="RoseGoldFaceMask.html" title="Go to Rose Gold Face Mask page."></a>
+					<img src="RoseGoldFaceMask.jpg alt=Person applying Rose Gold Face Mask to neck.">
+					<h2>Rose Gold Face Mask</h2>
+					<h4>Reduce the appearance of texture and bumps with this rose clay mask packed with nutrients from cocao and rose petalss</h4>
+					<h5>$24 - 4 oz.</h5>
+					<a href="addtocart.html" title="Add Rose Gold Face Mask to cart."></a>
+			</div>
+		</section>
+
+			
 			<p>Paragraph.</p>
 
 			<footer>
