--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 		</nav>
 
 		<section>
+			<img src="24CarrotFaceSerum.jpg alt=Person opening a bottle of 24 Carrot Face Serum">
 			<h1>24 Carrot Face Serum</h1>
-			<a href="24CarrotAddtoCart.html" title="Add 24 Carrot Face Serum to cart.">Add to Cart</a>
+			<h4>A nourishing blend of cold pressed carrot seed oil with frankincense, geranium, and lavender essential oils</h4>
+			<a href="addtocart.html" title="Add 24 Carrot Face Serum to cart.">Add to Cart</a>
 		</section>
 
 		<section>
@@ -39,6 +41,10 @@
 					<h5>$24 - 4 oz.</h5>
 					<a href="addtocart.html" title="Add Rose Gold Face Mask to cart."></a>
 			</div>
+		</section>
+
+		<section>
+			<a href="reviews.html" title="Go to reviews page"></a>
 		</section>
 
 			
