Added logo to images folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<body>
 		
 		<nav>
-			<img src="file:///Users/lizcardwell/Documents/IMED%201316/Haven.svg" alt="Image of the logo for Haven Natural Skincare">
+			<img src="images/logo.svg" alt="Image of the logo for Haven Natural Skincare">
 			<ul>
 				<li><a href="shop.html" title="Go to shop page.">Shop</a></li>
 				<li><a href="blog.html" title="Go to blog.">Blog</a></li>
@@ -44,14 +44,11 @@
 		</section>
 
 		<section>
-			<a href="reviews.html" title="Go to reviews page"></a>
+			<a href="reviews.html" title="Go to reviews page."></a>
 		</section>
 
-			
-			<p>Paragraph.</p>
-
 			<footer>
-				<img src="file:///Users/lizcardwell/Documents/IMED%201316/Haven.svg" alt="Image of the logo for Haven Natural Skincare">
+				<img src="images/logo.svg" alt="Image of the logo for Haven Natural Skincare">
 				<div>
 					<ul>
 						<li><a href="https://www.facebook.com/" title="Go to our Facebook page." target="_blank">Facebook</a></li>
