Added more images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</nav>
 
 		<section>
-			<img src="24CarrotFaceSerum.jpg alt=Person opening a bottle of 24 Carrot Face Serum">
+			<img src="images/24carrot.jpg" alt="Person opening a bottle of 24 Carrot Face Serum">
 			<h1>24 Carrot Face Serum</h1>
 			<h4>A nourishing blend of cold pressed carrot seed oil with frankincense, geranium, and lavender essential oils</h4>
 			<a href="addtocart.html" title="Add 24 Carrot Face Serum to cart.">Add to Cart</a>
@@ -29,13 +29,13 @@
 			</ul>
 			<div>
 				<a href="RoseGoldFaceSerum.html" title="Go to Rose Gold Face Serum page."></a>
-					<img src="RoseGoldFaceSerum.jpg alt=Person holding a bottle of Rose Gold Face Serum">
+					<img src="images/rosegoldfaceserum.jpg" alt="Person holding a bottle of Rose Gold Face Serum">
 					<h2>Rose Gold Face Serum</h2>
 					<h4>A skin quenching blend of cold pressed watermelon seed oil with rose otto and lavender essential oil that is perfect for all skin types</h4>
 					<h5>$54 - 2 fl. oz.</h5>
 					<a href="addtocart.html" title="Add Rose Gold Face Serum to cart."></a>
 				<a href="RoseGoldFaceMask.html" title="Go to Rose Gold Face Mask page."></a>
-					<img src="RoseGoldFaceMask.jpg alt=Person applying Rose Gold Face Mask to neck.">
+					<img src="images/rosegoldfacemask.jpg" alt="Person applying Rose Gold Face Mask to neck.">
 					<h2>Rose Gold Face Mask</h2>
 					<h4>Reduce the appearance of texture and bumps with this rose clay mask packed with nutrients from cocao and rose petalss</h4>
 					<h5>$24 - 4 oz.</h5>
