Updated some of the text

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<body>
 		
 		<nav>
-			<img src="images/logo.svg" alt="Image of the logo for Haven Natural Skincare">
+			<a href="index.html"><img src="images/logo.svg" alt="Image of the logo for Haven Natural Skincare"></a>
 			<ul>
-				<li><a href="shop.html" title="Go to shop page.">Shop</a></li>
-				<li><a href="blog.html" title="Go to blog.">Blog</a></li>
-				<li><a href="about.html" title="Go to about page.">About</a></li>
-				<li><a href="contact.html" title="Go to contact page.">Contact</a></li>
+				<li><a href="shop.html" title="Go to shop page.">SHOP</a></li>
+				<li><a href="blog.html" title="Go to blog.">BLOG</a></li>
+				<li><a href="about.html" title="Go to about page.">ABOUT</a></li>
+				<li><a href="contact.html" title="Go to contact page.">CONTACT</a></li>
 			</ul>
 		</nav>
 
@@ -18,14 +18,14 @@
 			<img src="images/24carrot.jpg" alt="Person opening a bottle of 24 Carrot Face Serum">
 			<h1>24 Carrot Face Serum</h1>
 			<h4>A nourishing blend of cold pressed carrot seed oil with frankincense, geranium, and lavender essential oils</h4>
-			<a href="addtocart.html" title="Add 24 Carrot Face Serum to cart.">Add to Cart</a>
+			<a href="addtocart.html" title="Add 24 Carrot Face Serum to cart.">ADD TO CART</a>
 		</section>
 
 		<section>
 			<ul>
-				<li><a href="shopall.html" title="Go to shop all page.">Shop All</a></li>
-				<li><a href="faceserums.html" title="Go to face serums page.">Face Serums</a></li>
-				<li><a href="facemasks.html" title="Go to face masks page.">Face Masks</a></li>
+				<li><a href="shopall.html" title="Go to shop all page.">SHOP ALL</a></li>
+				<li><a href="faceserums.html" title="Go to face serums page.">FACE SERUMS</a></li>
+				<li><a href="facemasks.html" title="Go to face masks page.">FACE MASKS</a></li>
 			</ul>
 			<div>
 				<a href="RoseGoldFaceSerum.html" title="Go to Rose Gold Face Serum page."></a>
@@ -34,12 +34,12 @@
 					<h4>A skin quenching blend of cold pressed watermelon seed oil with rose otto and lavender essential oil that is perfect for all skin types</h4>
 					<h5>$54 - 2 fl. oz.</h5>
 					<a href="addtocart.html" title="Add Rose Gold Face Serum to cart."></a>
-				<a href="RoseGoldFaceMask.html" title="Go to Rose Gold Face Mask page."></a>
+				<a href="RoseGoldFaceMask.html" title="Go to Rose Gold Face Mask page.">ADD TO CART</a>
 					<img src="images/rosegoldfacemask.jpg" alt="Person applying Rose Gold Face Mask to neck.">
 					<h2>Rose Gold Face Mask</h2>
 					<h4>Reduce the appearance of texture and bumps with this rose clay mask packed with nutrients from cocao and rose petalss</h4>
 					<h5>$24 - 4 oz.</h5>
-					<a href="addtocart.html" title="Add Rose Gold Face Mask to cart."></a>
+					<a href="addtocart.html" title="Add Rose Gold Face Mask to cart.">ADD TO CART</a>
 			</div>
 		</section>
 
@@ -48,7 +48,7 @@
 		</section>
 
 			<footer>
-				<img src="images/logo.svg" alt="Image of the logo for Haven Natural Skincare">
+				<a href="index.html"><img src="images/logo.svg" alt="Image of the logo for Haven Natural Skincare"></a>
 				<div>
 					<ul>
 						<li><a href="https://www.facebook.com/" title="Go to our Facebook page." target="_blank">Facebook</a></li>
@@ -57,7 +57,8 @@
 						<li><a href="https://www.instagram.com/" title="Go to our Instagram page." target="_blank">Instagram</a></li>
 					</ul>
 				<div>
-				<div>	
+				<div>
+					<p>LET'S BE FRIENDS!</p>	
 					<p><a href="signup.html" title="Go to email signup page.">Sign Up</a></p>
 					<p>© 2025 Haven Natural Skincare. All Rights Reserved.</p>
 				<div>	
@@ -65,7 +66,7 @@
 					<li><a href="faq.html" title="Go to faq page.">FAQ</a></li>
 					<li><a href="shipping.html" title="Go to shipping page.">Shipping</a></li>
 					<li><a href="returns.html" title="Go to returns page.">Returns</a></li>
-					<li><a href="privacypolicy.html" title="Go to privacy policy.">Privacy Policy</a></li>
+					<li><a href="privacypolicy.html" title="Read our privacy policy.">Privacy Policy</a></li>
 				</ul>
 			</footer>
 			
