--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<h2>Rose Gold Face Serum</h2>
 					<h4>A skin quenching blend of cold pressed watermelon seed oil with rose otto and lavender essential oil that is perfect for all skin types</h4>
 					<h5>$54 - 2 fl. oz.</h5>
-					<a href="addtocart.html" title="Add Rose Gold Face Serum to cart."></a>
+					<a href="addtocart.html" title="Add Rose Gold Face Serum to cart."></a>	
 				<a href="RoseGoldFaceMask.html" title="Go to Rose Gold Face Mask page.">ADD TO CART</a>
 					<img src="images/rosegoldfacemask.jpg" alt="Person applying Rose Gold Face Mask to neck.">
 					<h2>Rose Gold Face Mask</h2>
@@ -41,9 +41,9 @@
 					<h5>$24 - 4 oz.</h5>
 					<a href="addtocart.html" title="Add Rose Gold Face Mask to cart.">ADD TO CART</a>
 			</div>
-		</section>
 
 		<section>
+			<h2>REVIEWS</h2>
 			<a href="reviews.html" title="Go to reviews page."></a>
 		</section>
 
