--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<body>
 		
 		<nav>
-			<a href="index.html"><img src="images/logo.svg" alt="Image of the logo for Haven Natural Skincare"></a>
+			<a href="index.html" title="Go to home page."><img src="images/logo.svg" alt="Image of the logo for Haven Natural Skincare"></a>
 			<ul>
 				<li><a href="shop.html" title="Go to shop page.">SHOP</a></li>
 				<li><a href="blog.html" title="Go to blog.">BLOG</a></li>
@@ -48,7 +48,7 @@
 		</section>
 
 			<footer>
-				<a href="index.html"><img src="images/logo.svg" alt="Image of the logo for Haven Natural Skincare"></a>
+				<a href="index.html" title="Go to home page."><img src="images/logo.svg" alt="Image of the logo for Haven Natural Skincare"></a>
 				<div>
 					<ul>
 						<li><a href="https://www.facebook.com/" title="Go to our Facebook page." target="_blank">Facebook</a></li>
