--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
 		<title>Haven Natural Skincare</title>
+		<link href="css/normalize.css" rel="stylesheet" />
+		<link href="css/style.css" rel="stylesheet" />
 	</head>	
 	<body>
 		
@@ -17,7 +19,7 @@
 		<section>
 			<img src="images/24carrot.jpg" alt="Person opening a bottle of 24 Carrot Face Serum">
 			<h1>24 Carrot Face Serum</h1>
-			<h4>A nourishing blend of cold pressed carrot seed oil with frankincense, geranium, and lavender essential oils</h4>
+			<p>A nourishing blend of cold pressed carrot seed oil with frankincense, geranium, and lavender essential oils</p>
 			<a href="addtocart.html" title="Add 24 Carrot Face Serum to cart.">ADD TO CART</a>
 		</section>
 
@@ -31,14 +33,14 @@
 				<a href="RoseGoldFaceSerum.html" title="Go to Rose Gold Face Serum page."></a>
 					<img src="images/rosegoldfaceserum.jpg" alt="Person holding a bottle of Rose Gold Face Serum">
 					<h2>Rose Gold Face Serum</h2>
-					<h4>A skin quenching blend of cold pressed watermelon seed oil with rose otto and lavender essential oil that is perfect for all skin types</h4>
-					<h5>$54 - 2 fl. oz.</h5>
+					<p>A skin quenching blend of cold pressed watermelon seed oil with rose otto and lavender essential oil that is perfect for all skin types</p>
+					<p>$54 - 2 fl. oz.</p>
 					<a href="addtocart.html" title="Add Rose Gold Face Serum to cart."></a>	
 				<a href="RoseGoldFaceMask.html" title="Go to Rose Gold Face Mask page.">ADD TO CART</a>
 					<img src="images/rosegoldfacemask.jpg" alt="Person applying Rose Gold Face Mask to neck.">
 					<h2>Rose Gold Face Mask</h2>
-					<h4>Reduce the appearance of texture and bumps with this rose clay mask packed with nutrients from cocao and rose petalss</h4>
-					<h5>$24 - 4 oz.</h5>
+					<p>Reduce the appearance of texture and bumps with this rose clay mask packed with nutrients from cocao and rose petalss</p>
+					<p>$24 - 4 oz.</p>
 					<a href="addtocart.html" title="Add Rose Gold Face Mask to cart.">ADD TO CART</a>
 			</div>
 
