--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<nav>
 			<a href="index.html" title="Go to home page."><img src="images/logo.svg" alt="Image of the logo for Haven Natural Skincare"></a>
 			<ul>
-				<li><a href="shop.html" title="Go to shop page.">SHOP</a></li>
+				<li><a href="shop.html" title="Go to shop page." class="shopbtn">SHOP</a></li>	
 				<li><a href="blog.html" title="Go to blog.">BLOG</a></li>
 				<li><a href="about.html" title="Go to about page.">ABOUT</a></li>
 				<li><a href="contact.html" title="Go to contact page.">CONTACT</a></li>
@@ -18,29 +18,29 @@
 
 		<section>
 			<img src="images/24carrot.jpg" alt="Person opening a bottle of 24 Carrot Face Serum">
-			<h1>24 Carrot Face Serum</h1>
+			<h1>24 CARROT FACE SERUM</h1>
 			<p>A nourishing blend of cold pressed carrot seed oil with frankincense, geranium, and lavender essential oils</p>
 			<a href="addtocart.html" title="Add 24 Carrot Face Serum to cart.">ADD TO CART</a>
 		</section>
 
 		<section>
 			<ul>
-				<li><a href="shopall.html" title="Go to shop all page.">SHOP ALL</a></li>
+				<li><a href="shopall.html" title="Go to shop all page." class="shopallbtn">SHOP ALL</a></li>
 				<li><a href="faceserums.html" title="Go to face serums page.">FACE SERUMS</a></li>
 				<li><a href="facemasks.html" title="Go to face masks page.">FACE MASKS</a></li>
 			</ul>
 			<div>
 				<a href="RoseGoldFaceSerum.html" title="Go to Rose Gold Face Serum page."></a>
 					<img src="images/rosegoldfaceserum.jpg" alt="Person holding a bottle of Rose Gold Face Serum">
-					<h2>Rose Gold Face Serum</h2>
+					<h2>ROSE GOLD FACE SERUM</h2>
 					<p>A skin quenching blend of cold pressed watermelon seed oil with rose otto and lavender essential oil that is perfect for all skin types</p>
-					<p>$54 - 2 fl. oz.</p>
+					<p>$54 - 2 fl oz</p>
 					<a href="addtocart.html" title="Add Rose Gold Face Serum to cart."></a>	
 				<a href="RoseGoldFaceMask.html" title="Go to Rose Gold Face Mask page.">ADD TO CART</a>
 					<img src="images/rosegoldfacemask.jpg" alt="Person applying Rose Gold Face Mask to neck.">
-					<h2>Rose Gold Face Mask</h2>
+					<h2>ROSE GOLD FACE MASK</h2>
 					<p>Reduce the appearance of texture and bumps with this rose clay mask packed with nutrients from cocao and rose petalss</p>
-					<p>$24 - 4 oz.</p>
+					<p>$24 - 4 oz</p>
 					<a href="addtocart.html" title="Add Rose Gold Face Mask to cart.">ADD TO CART</a>
 			</div>
 
