--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		
 		<nav>
-			<a href="index.html" title="Go to home page."><img src="images/logo.svg" alt="Image of the logo for Haven Natural Skincare"></a>
+			<a href="index.html" title="Go to home page."><img src="images/logo.svg" width="375" alt="Image of the logo for Haven Natural Skincare"></a>
 			<ul>
 				<li><a href="shop.html" title="Go to shop page." class="shopbtn">SHOP</a></li>	
 				<li><a href="blog.html" title="Go to blog.">BLOG</a></li>
@@ -21,37 +21,44 @@
 			<img src="images/24carrot.jpg" alt="Person opening a bottle of 24 Carrot Face Serum">
 			<h1>24 CARROT FACE SERUM</h1>
 			<p>A nourishing blend of cold pressed carrot seed oil with frankincense, geranium, and lavender essential oils</p>
-			<a href="addtocart.html" title="Add 24 Carrot Face Serum to cart.">ADD TO CART</a>
+			<a href="addtocart.html" title="Add 24 Carrot Face Serum to cart." class="atcbtn">ADD TO CART</a>
 		</section>
 
 		<section>
-			<ul>
-				<li><a href="shopall.html" title="Go to shop all page." class="shopallbtn">SHOP ALL</a></li>
-				<li><a href="faceserums.html" title="Go to face serums page.">FACE SERUMS</a></li>
-				<li><a href="facemasks.html" title="Go to face masks page.">FACE MASKS</a></li>
-			</ul>
+			<nav>
+				<ul>
+					<li><a href="shopall.html" title="Go to shop all page." class="shopallbtn">SHOP ALL</a></li>
+					<li><a href="faceserums.html" title="Go to face serums page.">FACE SERUMS</a></li>
+					<li><a href="facemasks.html" title="Go to face masks page.">FACE MASKS</a></li>
+				</ul>
+			</nav>
 			<div>
 				<a href="RoseGoldFaceSerum.html" title="Go to Rose Gold Face Serum page."></a>
 					<img src="images/rosegoldfaceserum.jpg" alt="Person holding a bottle of Rose Gold Face Serum">
 					<h2>ROSE GOLD FACE SERUM</h2>
 					<p>A skin quenching blend of cold pressed watermelon seed oil with rose otto and lavender essential oil that is perfect for all skin types</p>
 					<p>$54 - 2 fl oz</p>
-					<a href="addtocart.html" title="Add Rose Gold Face Serum to cart."></a>	
-				<a href="RoseGoldFaceMask.html" title="Go to Rose Gold Face Mask page.">ADD TO CART</a>
+					<a href="addtocart.html" title="Add Rose Gold Face Serum to cart." class="atcbtn">ADD TO CART</a>	
+				<a href="RoseGoldFaceMask.html" title="Go to Rose Gold Face Mask page."></a>
 					<img src="images/rosegoldfacemask.jpg" alt="Person applying Rose Gold Face Mask to neck.">
 					<h2>ROSE GOLD FACE MASK</h2>
 					<p>Reduce the appearance of texture and bumps with this rose clay mask packed with nutrients from cocao and rose petalss</p>
 					<p>$24 - 4 oz</p>
-					<a href="addtocart.html" title="Add Rose Gold Face Mask to cart.">ADD TO CART</a>
+					<a href="addtocart.html" title="Add Rose Gold Face Mask to cart." class="atcbtn">ADD TO CART</a>
 			</div>
 
 		<section>
 			<h2>REVIEWS</h2>
 			<a href="reviews.html" title="Go to reviews page."></a>
+			<div>
+				<p>“I was never into face masks, but since adding the rose clay mask to my routine, I can see a real difference in texture.”</p>
+				<p>“The 24 Carrot Serum has been a lifesaver! It keeps my skin looking fresh and dewey all day!”</p>
+				<p>“I love all of Haven’s products! Simple, effective, and affordable. And customer service is fast to answer any questions!”</p>
+			</div>
 		</section>
 
 			<footer>
-				<a href="index.html" title="Go to home page."><img src="images/logo.svg" alt="Image of the logo for Haven Natural Skincare"></a>
+				<a href="index.html" title="Go to home page."><img src="images/logo.svg" width="375" alt="Image of the logo for Haven Natural Skincare"></a>
 				<div>
 					<ul>
 						<li><a href="https://www.facebook.com/" title="Go to our Facebook page." target="_blank">Facebook</a></li>
