--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</ul>
 		</nav>
 
-		<section>
+		<section class="hero">
 			<img src="images/24carrot.jpg" alt="Person opening a bottle of 24 Carrot Face Serum">
 			<h1>24 CARROT FACE SERUM</h1>
 			<p>A nourishing blend of cold pressed carrot seed oil with frankincense, geranium, and lavender essential oils</p>
@@ -32,53 +32,63 @@
 					<li><a href="facemasks.html" title="Go to face masks page.">FACE MASKS</a></li>
 				</ul>
 			</nav>
+		</section>
 			<div>
-				<a href="RoseGoldFaceSerum.html" title="Go to Rose Gold Face Serum page."></a>
-					<img src="images/rosegoldfaceserum.jpg" alt="Person holding a bottle of Rose Gold Face Serum">
-					<h2>ROSE GOLD FACE SERUM</h2>
-					<p>A skin quenching blend of cold pressed watermelon seed oil with rose otto and lavender essential oil that is perfect for all skin types</p>
-					<p>$54 - 2 fl oz</p>
-					<a href="addtocart.html" title="Add Rose Gold Face Serum to cart." class="atcbtn">ADD TO CART</a>	
-				<a href="RoseGoldFaceMask.html" title="Go to Rose Gold Face Mask page."></a>
-					<img src="images/rosegoldfacemask.jpg" alt="Person applying Rose Gold Face Mask to neck.">
-					<h2>ROSE GOLD FACE MASK</h2>
-					<p>Reduce the appearance of texture and bumps with this rose clay mask packed with nutrients from cocao and rose petalss</p>
-					<p>$24 - 4 oz</p>
-					<a href="addtocart.html" title="Add Rose Gold Face Mask to cart." class="atcbtn">ADD TO CART</a>
+				<section class="shopall">
+					<a href="RoseGoldFaceSerum.html" title="Go to Rose Gold Face Serum page."></a>
+						<img src="images/rosegoldfaceserum.jpg" alt="Person holding a bottle of Rose Gold Face Serum">
+						<h2>ROSE GOLD FACE SERUM</h2>
+						<p>A skin quenching blend of cold pressed watermelon seed oil with rose otto and lavender essential oil that is perfect for all skin types</p>
+						<p>$54 - 2 fl oz</p>
+						<a href="addtocart.html" title="Add Rose Gold Face Serum to cart." class="atcbtn">ADD TO CART</a>	
+					<a href="RoseGoldFaceMask.html" title="Go to Rose Gold Face Mask page."></a>
+						<img src="images/rosegoldfacemask.jpg" alt="Person applying Rose Gold Face Mask to neck.">
+						<h2>ROSE GOLD FACE MASK</h2>
+						<p>Reduce the appearance of texture and bumps with this rose clay mask packed with nutrients from cocao and rose petalss</p>
+						<p>$24 - 4 oz</p>
+						<a href="addtocart.html" title="Add Rose Gold Face Mask to cart." class="atcbtn">ADD TO CART</a>
+				</section>
 			</div>
 
-		<section>
+		<section class="reviews">
 			<h2>REVIEWS</h2>
 			<a href="reviews.html" title="Go to reviews page."></a>
 			<div>
-				<p>“I was never into face masks, but since adding the rose clay mask to my routine, I can see a real difference in texture.”</p>
-				<p>“The 24 Carrot Serum has been a lifesaver! It keeps my skin looking fresh and dewey all day!”</p>
-				<p>“I love all of Haven’s products! Simple, effective, and affordable. And customer service is fast to answer any questions!”</p>
+				<table>
+					<tr>
+    					<td>“I was never into face masks, but since adding the rose clay mask to my routine, I can see a real difference in texture.”</td>
+    					<td>“The 24 Carrot Serum has been a lifesaver! It keeps my skin looking fresh and dewey all day!”</td>
+    					<td>“I love all of Haven’s products! Simple, effective, and affordable. And customer service is fast to answer any questions!”</td>
+  					</tr>
+  				</table>	
 			</div>
 		</section>
 
 			<footer>
-				<a href="index.html" title="Go to home page."><img src="images/logo.svg" width="375" alt="Image of the logo for Haven Natural Skincare"></a>
+				<a href="index.html" title="Go to home page."><img src="images/logo.svg" width="275" alt="Image of the logo for Haven Natural Skincare"></a>
 				<div>
-					<ul>
-						<li><a href="https://www.facebook.com/" title="Go to our Facebook page." target="_blank">Facebook</a></li>
-						<li><a href="https://www.linkedin.com/" title="Go to our LinkedIn page." target="_blank">LinkedIn</a></li>
-						<li><a href="https://www.youtube.com/" title="Go to our YouTube page." target="_blank">YouTube</a></li>
-						<li><a href="https://www.instagram.com/" title="Go to our Instagram page." target="_blank">Instagram</a></li>
-					</ul>
+					<nav>
+						<ul>
+							<li><a href="https://www.facebook.com/" title="Go to our Facebook page." target="_blank">Facebook</a></li>
+							<li><a href="https://www.linkedin.com/" title="Go to our LinkedIn page." target="_blank">LinkedIn</a></li>
+							<li><a href="https://www.youtube.com/" title="Go to our YouTube page." target="_blank">YouTube</a></li>
+							<li><a href="https://www.instagram.com/" title="Go to our Instagram page." target="_blank">Instagram</a></li>
+						</ul>
+					</nav>	
 				<div>
 				<div>
 					<p>LET'S BE FRIENDS!</p>	
 					<p><a href="signup.html" title="Go to email signup page.">Sign Up</a></p>
 					<p>© 2025 Haven Natural Skincare. All Rights Reserved.</p>
-				<div>	
-				<ul>
-					<li><a href="faq.html" title="Go to faq page.">FAQ</a></li>
-					<li><a href="shipping.html" title="Go to shipping page.">Shipping</a></li>
-					<li><a href="returns.html" title="Go to returns page.">Returns</a></li>
-					<li><a href="privacypolicy.html" title="Read our privacy policy.">Privacy Policy</a></li>
-				</ul>
+				<div>
+					<nav>
+						<ul>
+							<li><a href="faq.html" title="Go to faq page.">FAQ</a></li>
+							<li><a href="shipping.html" title="Go to shipping page.">SHIPPING</a></li>
+							<li><a href="returns.html" title="Go to returns page.">RETURNS</a></li>
+							<li><a href="privacypolicy.html" title="Read our privacy policy.">PRIVACY POLICY</a></li>
+						</ul>
+					</nav>
 			</footer>
-			
 	</body>
 </html>
