--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
 				<div>
 					<p>LET'S BE FRIENDS!</p>	
 					<p><a href="signup.html" title="Go to email signup page.">Sign Up</a></p>
+					<form>
+  						<label for="email">EMAIL</label><br>
+  						<input type="text" id="email" name="email"><br>
+					</form>
 					<p>© 2025 Haven Natural Skincare. All Rights Reserved.</p>
 				<div>
 					<nav>
