Added blog page but css isn't applying

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<a href="index.html" title="Go to home page."><img src="images/logo.svg" width="375" alt="Image of the logo for Haven Natural Skincare"></a>
 			<ul>
 				<li><a href="shop.html" title="Go to shop page." class="shopbtn">SHOP</a></li>	
-				<li><a href="blog.html" title="Go to blog.">BLOG</a></li>
+				<li><a href="html/blog.html" title="Go to blog.">BLOG</a></li>
 				<li><a href="about.html" title="Go to about page.">ABOUT</a></li>
 				<li><a href="contact.html" title="Go to contact page.">CONTACT</a></li>
 			</ul>
@@ -80,7 +80,7 @@
 					<p>LET'S BE FRIENDS!</p>	
 					<p><a href="signup.html" title="Go to email signup page.">Sign Up</a></p>
 					<form>
-  						<label for="email">EMAIL</label><br>
+  						<label for="email">SIGN UP</label><br>
   						<input type="text" id="email" name="email"><br>
 					</form>
 					<p>© 2025 Haven Natural Skincare. All Rights Reserved.</p>
