--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Haven Natural Skincare</title>
+		<link rel="icon" type="image/png" href="images/favicon.png" />
 		<link href="css/normalize.css" rel="stylesheet" />
 		<link href="css/style.css" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
